--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -171,7 +171,7 @@ a:hover {
   align-items: center;
   justify-content: center;
   gap: clamp(0.5rem, 2vh, 1.5rem);  
-  margin: 0 auto;
+  margin: 1rem auto;
   max-height: 100%; /* Keeps nav within main bounds */
 }
 
